--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Versions -->
         <junit-platform-surefire-provider>1.3.2</junit-platform-surefire-provider>
-        <spring-boot-starter-actuator>2.7.1</spring-boot-starter-actuator>
+        <spring-boot-starter-actuator>2.7.3</spring-boot-starter-actuator>
         <lombok-mapstruct-binding>0.2.0</lombok-mapstruct-binding>
         <mapstruct-processor>1.4.2.Final</mapstruct-processor>
-        <junit-jupiter-engine>5.9.0-M1</junit-jupiter-engine>
+        <junit-jupiter-engine>5.9.0</junit-jupiter-engine>
         <springdoc-openapi-ui>1.6.10</springdoc-openapi-ui>
         <swagger-annotations>1.6.6</swagger-annotations>
         <junit-jupiter-api>5.9.0-M1</junit-jupiter-api>
-        <mapstruct>1.5.1.Final</mapstruct>
+        <mapstruct>1.5.2.Final</mapstruct>
         <commons-io>2.11.0</commons-io>
         <lombok>1.18.24</lombok>
         <okhttp>4.10.0</okhttp>
@@ -113,20 +113,20 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.11.1</version>
+            <version>0.11.5</version>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.11.1</version>
+            <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.1</version>
+            <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
