--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <junit-jupiter-api>5.9.0-M1</junit-jupiter-api>
         <mapstruct>1.5.2.Final</mapstruct>
         <commons-io>2.11.0</commons-io>
+        <postgresql>42.5.0</postgresql>
         <lombok>1.18.24</lombok>
         <okhttp>4.10.0</okhttp>
     </properties>
@@ -32,11 +33,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.3</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.7.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -75,6 +78,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
+            <version>2.7.3</version>
         </dependency>
 
         <dependency>
@@ -86,6 +90,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.7.3</version>
         </dependency>
 
         <dependency>
@@ -94,10 +99,11 @@
             <version>${mapstruct}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
-        </dependency>
+            <version>6.1.2.Final</version>
+        </dependency>-->
 
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
@@ -125,6 +131,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
@@ -143,6 +155,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.3</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
