--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,26 @@
         <!-- Versions -->
         <junit-platform-surefire-provider>1.3.2</junit-platform-surefire-provider>
         <spring-boot-starter-actuator>2.7.3</spring-boot-starter-actuator>
+        <spring-boot-starter-data-jpa>2.7.3</spring-boot-starter-data-jpa>
+        <spring-boot-starter-cache>2.7.3</spring-boot-starter-cache>
         <lombok-mapstruct-binding>0.2.0</lombok-mapstruct-binding>
+        <spring-boot-starter-test>2.7.3</spring-boot-starter-test>
+        <spring-boot-maven-plugin>2.7.3</spring-boot-maven-plugin>
+        <spring-boot-starter-web>2.7.3</spring-boot-starter-web>
         <mapstruct-processor>1.4.2.Final</mapstruct-processor>
-        <junit-jupiter-engine>5.9.0</junit-jupiter-engine>
+        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
         <springdoc-openapi-ui>1.6.10</springdoc-openapi-ui>
         <mysql-connector-java>8.0.30</mysql-connector-java>
+        <junit-jupiter-engine>5.9.0</junit-jupiter-engine>
         <swagger-annotations>1.6.6</swagger-annotations>
         <junit-jupiter-api>5.9.0-M1</junit-jupiter-api>
+        <hibernate-envers>6.1.2.Final</hibernate-envers>
+        <jjwt-jackson>0.11.5</jjwt-jackson>
         <mapstruct>1.5.2.Final</mapstruct>
-        <commons-io>2.11.0</commons-io>
         <postgresql>42.5.0</postgresql>
+        <commons-io>2.11.0</commons-io>
+        <jjwt-impl>0.11.5</jjwt-impl>
+        <jjwt-api>0.11.5</jjwt-api>
         <lombok>1.18.24</lombok>
         <okhttp>4.10.0</okhttp>
     </properties>
@@ -33,13 +43,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.7.3</version>
+            <version>${spring-boot-starter-web}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.7.3</version>
+            <version>${spring-boot-starter-test}</version>
             <scope>test</scope>
         </dependency>
 
@@ -78,7 +88,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
-            <version>2.7.3</version>
+            <version>${spring-boot-starter-cache}</version>
         </dependency>
 
         <dependency>
@@ -90,7 +100,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.7.3</version>
+            <version>${spring-boot-starter-data-jpa}</version>
         </dependency>
 
         <dependency>
@@ -102,7 +112,7 @@
         <!--<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
-            <version>6.1.2.Final</version>
+            <version>${hibernate-envers}</version>
         </dependency>-->
 
         <dependency>
@@ -120,13 +130,13 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt-api}</version>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt-impl}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -139,7 +149,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt-jackson}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -155,12 +165,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.3</version>
+                <version>${spring-boot-maven-plugin}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven-compiler-plugin}</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
