--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,17 @@ spring:
     active: development
   # Database
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://156.253.5.223:5432/auth
-    username: postgres
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://156.253.5.223:3306/auth
+    username: root
     password: myjava123
   # JPA properties
   jpa:
     hibernate:
       ddl-auto: create-drop # When you launch the application for the first time - switch "none" at "create"
     show-sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     open-in-view: false
     generate-ddl: true
 # Logger configuration
